# Crossy-Road

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: .gitignore  Direction.h  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  Vehicle.cpp  Vehicle.h  resource.qrc
